# rosti-clickup

./: .env.example  Cargo.toml  README.md
src/: main.rs
